# dw-copa-do-mundo/routes/api.php
@@ -2,6 +2,7 @@
 
 use App\Http\Controllers\AuthController;
 use App\Http\Controllers\StickerController;
+use App\Http\Controllers\StickerUserController;
 use App\Http\Controllers\UserController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
@@ -17,23 +18,23 @@ use Illuminate\Support\Facades\Route;
 |
 */
 
+//Fora de qualquer middleware , qualquer um pode se cadastrar
+Route::post('/register', [UserController::class, 'store']);
 
 
-Route::group([
-
-    'prefix' => 'auth'
-
-], function ($router) {
+Route::group(['prefix' => 'auth'], function ($router) {
     $router->post('/',  [AuthController::class, 'login']);
-
     $router->post('logout', [AuthController::class, 'logout'])->middleware('auth');
     $router->post('refresh', [AuthController::class, 'refresh'])->middleware('auth');
 });
-Route::post('/register', [UserController::class, 'store']);
+
 Route::get('/me', [AuthController::class, 'me'])->middleware('auth');
-Route::get('/stickers', [StickerController::class,'index'])->middleware('auth');
-Route::post('/sticker', [StickerController::class,'store'])->middleware('auth');
-Route::post('/sticker/{id}', [StickerController::class,'update'])->middleware('auth');
-Route::get('/sticker/{id}', [StickerController::class,'show'])->middleware('auth');
+//Stickers
+Route::get('/stickers', [StickerController::class, 'index'])->middleware('auth');
+Route::post('/sticker', [StickerController::class, 'store'])->middleware('auth');
+Route::post('/sticker/{id}', [StickerController::class, 'update'])->middleware('auth');
+Route::get('/sticker/{id}', [StickerController::class, 'show'])->middleware('auth');
 
 
+Route::post('/user/sticker', [StickerUserController::class , 'store'] )->middleware('auth');
+Route::get('/user/stickers', [StickerUserController::class , 'show'] )->middleware('auth');
